--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -159,6 +159,24 @@ body {
         color: #666;
       }
     }
+
+    .filter {
+      border: 1px red solid;
+      font-size: 12px;
+      padding: 2px 0 2px 2px;
+
+      .filter-value {
+        color: red;
+      }
+
+      .remove-filter {
+        text-decoration: none;
+        color: white;
+        font-weight: bold;
+        background: red;
+        padding: 2px;
+      }
+    }
   }
 
   .filters {
@@ -196,26 +214,33 @@ body {
   .crowdfunding-info {
     margin-bottom: 20px;
     font-size: 14px;
+
     .have-text {
       font-size: 16px;
     }
+
     .total-amount {
       .symbol {
         font-size: 20px;
       }
+
       font-size: 32px;
     }
+
     .progress {
       height: 10px;
       margin-bottom: 5px;
     }
+
     .progress-info {
       font-weight: 600;
       margin: 10px 0;
     }
+
     .current-progress {
       color: rgb(161, 6, 224);
     }
+
     .text-red {
       color: red;
     }
@@ -364,16 +389,19 @@ body {
   .properties-list {
     border-bottom: 1px solid #e6e6e6;
     margin-bottom: 20px;
+
     .properties-list-title {
       padding: 5px 0;
       color: #999;
       font-weight: 700;
     }
+
     .properties-list-body {
       font-size: 12px;
       padding: 5px 0;
       list-style: none;
       text-indent: 0;
+
       li {
         display: inline-block;
         width: 30%;
@@ -381,6 +409,7 @@ body {
       }
     }
   }
+
   .product-description img {
     max-width: 100%;
   }
@@ -706,60 +735,75 @@ body {
   }
 }
 
- //分期付款
+//分期付款
 .installments-show-page {
   font-size: 12px;
+
   .table {
     margin-bottom: 0;
+
     .repaid {
       color: green;
     }
+
     .overdue {
       color: red;
     }
   }
+
   .item-amount {
     padding-right: 20px;
     width: 200px;
   }
+
   .installment-top {
     display: flex;
     flex-direction: row;
     margin-bottom: 20px;
   }
+
   .installment-info {
     width: 50%;
+
     .line {
       display: flex;
       flex-direction: row;
+
       .line-label {
         width: 80px;
         text-align: right;
       }
+
       .line-value {
         padding-left: 20px;
         flex-shrink: 100;
       }
     }
+
     border-right: 1px solid #ddd;
   }
+
   .installment-next {
     width: 50%;
-    font-family: Verdana,Tahoma,Helvetica,Arial;
+    font-family: Verdana, Tahoma, Helvetica, Arial;
+
     .installment-clear {
       font-weight: bolder;
       font-size: 16px;
     }
+
     .total-amount {
       font-weight: bolder;
       font-size: 14px;
     }
+
     .value {
       display: inline-block;
       width: 150px;
       padding-right: 20px;
     }
   }
+
   .payment-buttons {
     margin-top: 10px;
     padding-right: 10px;
