推荐相似商品

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -57,12 +57,7 @@ body {
     }
   }
 }
-
-.products-index-page, .products-favorites-page {
-  .pagination {
-    margin-right: 5px;
-  }
-
+@mixin product-list{
   .products-list {
     padding: 0 15px;
 
@@ -133,7 +128,12 @@ body {
       }
     }
   }
-
+}
+.products-index-page, .products-favorites-page {
+  .pagination {
+    margin-right: 5px;
+  }
+  @include product-list;
   .search-form {
     padding: 0 5px 10px;
 
@@ -412,6 +412,16 @@ body {
 
   .product-description img {
     max-width: 100%;
+  }
+
+  .similar-products{
+    @include product-list;
+    .title{
+      font-weight: normal;
+    }
+    .price{
+      background-color:unset;
+    }
   }
 }
 
